# mk-burguer-drf

./: .env_samples  .pre-commit-config.yaml  Dockerfile.dev  Dockerfile.prod  Dokerfile.dev  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: CI.yml
docker/nginx/: default.conf
mk_burger/: asgi.py  settings.py  urls.py  wsgi.py
mk_burger/core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
mk_burger/core/migrations/: 0001_initial.py  0002_status_alter_bread_options_alter_meat_options_and_more.py  0003_alter_optional_options_alter_status_options_burger.py  0004_rename_meat_burger_carne_rename_name_burger_nome_and_more.py
mk_burger/core/tests/: conftest.py  test_api.py  test_ingrentes_list.py  test_root.py  test_serializers.py
mk_burger/core/tests/api/: test_burger.py  test_status_ingredients.py
mk_burger/core/tests/models/: test_bread.py  test_burger.py  test_meat.py  test_optional.py  test_status.py
